fix(dissemination): get recipients from events into DisseminationInfo